resolve: aligned names

--- a/resolve/resolve-style.css
+++ b/resolve/resolve-style.css
@@ -403,6 +403,7 @@ img {
 .speaker-details {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .speaker-name {
