--- a/resolve/style/style.scss
+++ b/resolve/style/style.scss
@@ -164,6 +164,7 @@
 .speaker-details {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .speaker-name {
